@@ -4,6 +4,7 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
     i18n_domain="ftw.statusmap">
 
 
@@ -21,5 +22,12 @@
 
     <!-- Register translations-->
     <i18n:registerTranslations directory="locales"/>
+
+    <include package="ftw.upgrade" file="meta.zcml" />
+
+    <upgrade-step:directory
+        profile="ftw.statusmap:default"
+        directory="./upgrades"
+        />
 
 </configure>
