@@ -1,19 +1,16 @@
 <?xml version="1.0"?>
 <object name="portal_actions" meta_type="Plone Actions Tool"
    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
  <object name="object" meta_type="CMF Action Category">
+
   <object name="workflowmap" meta_type="CMF Action"
      i18n:domain="ftw.statusmap">
-   <property name="title" i18n:translate="">Statusmap</property>
-   <property name="description" i18n:translate=""></property>
-   <property name="url_expr">string:${object_url}/statusmap</property>
-   <property name="icon_expr"></property>
+
    <property name="available_expr">python:not context.restrictedTraverse('@@plone_interface_info').provides('Products.CMFPlone.interfaces.IPloneSiteRoot')</property>
-   <property name="permissions">
-    <element value="Request review"/>
-    <element value="Review portal content"/>
-   </property>
-   <property name="visible">True</property>
+
   </object>
+
  </object>
+
 </object>
