@@ -4,7 +4,8 @@ Changelog
 1.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Do not show statusmap link on plone root.
+  [mathias.leimgruber]
 
 
 1.2.1 (2015-12-07)
